--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
   "version": "0.0.1",
   "dependencies": {
     "restify": "^2.8.3"
+  },
+  "scripts": {
+    "postinstall": "npm link fr-builder fr-infra fr-routing fr-server",
+    "postupdate": "npm link fr-builder fr-infra fr-routing fr-server"
   }
 }
